--- a/exercicio1/style.css
+++ b/exercicio1/style.css
@@ -26,7 +26,7 @@
   }
   
   article, .d{
-    background-color: #dedede;
+    background-color: black;
     height: 25%;
     width: 100%;
     margin-top: 20px;
